# koldstore

./: .cargo-crap.toml  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  koldstore.control
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: extension_cold_pruning.rs  extension_flush.rs  extension_manifest.rs  extension_serialization.rs
benchmarks/pgbench/: delete_batch.sql  delete_single.sql  insert_batch.sql  insert_single.sql  mixed_20_clients.sql  query_cold_miss.sql  query_cold_only_single.sql  query_hot_batch.sql  query_hot_cold_batch.sql  query_hot_cold_single.sql  query_hot_single.sql  update_batch.sql  update_single.sql
benchmarks/scripts/: collect_db_stats.sh  collect_system_stats.sh  generate_report.py  run.sh
benchmarks/sql/: 01_schema_extension.sql  02_seed_100k.sql  03_indexes.sql  04_extension_setup.sql
benchmarks/src/: client.rs  cold_pruning.rs  hot_dml_vs_heap.rs  main.rs  pgbench.rs  report.rs  suite.rs  verdict.rs
crates/koldstore-catalog/: Cargo.toml
crates/koldstore-catalog/src/: cache.rs  cold_pk_hints.rs  cold_segments.rs  decode.rs  lib.rs  manifest_row.rs  queries.rs  row_events.rs  schema_registry.rs  schema_versions.rs  segments.rs  sync_state.rs  table_meta.rs  type_matrix.rs
crates/koldstore-catalog/tests/: catalog_models.rs  schema_versions.rs
crates/koldstore-common/: Cargo.toml
crates/koldstore-common/src/: column_id.rs  config.rs  error.rs  ident.rs  lib.rs  pk.rs  row.rs  scope_counter_key.rs  seq.rs  snowflake.rs  sql.rs  strings.rs  table_name.rs
crates/koldstore-common/tests/: core_models.rs
crates/koldstore-flush/: Cargo.toml
crates/koldstore-flush/src/: cleanup.rs  encode.rs  job.rs  lib.rs  ops.rs  pending_catalog.rs  policy.rs  pre_flush.rs  recovery.rs  scheduler.rs  scope_counters.rs  segment_catalog.rs  segment_write.rs  stats.rs  table_counters.rs  table_flush.rs  table_jobs.rs  worker.rs  write.rs
crates/koldstore-flush/tests/: flush_clean_schema.rs  flush_concurrency.rs  flush_lifecycle.rs  flush_policy.rs  manifest_pending.rs  ops_functions.rs  recovery_execution.rs  scope_counters.rs  segment_publish.rs  stats_selection.rs
crates/koldstore-jobs/: Cargo.toml
crates/koldstore-jobs/src/: lease.rs  lib.rs  model.rs  phase.rs
crates/koldstore-manifest/: Cargo.toml
crates/koldstore-manifest/src/: assembly.rs  io.rs  lib.rs  model.rs  paths.rs  publish.rs  sync_state.rs
crates/koldstore-manifest/tests/: assembly_and_io.rs  manifest_schema.rs  publish.rs  publish_protocol.rs
crates/koldstore-merge/: Cargo.toml
crates/koldstore-merge/src/: changelog.rs  lib.rs  quals.rs  resolver.rs
crates/koldstore-merge/tests/: changelog.rs  changes_since.rs  cold_only_update_mvp.rs  delete_row_api.rs  hydrate_pk.rs  merge_scan_exec.rs  quals.rs  resolver.rs  rls_cold_security.rs  update_row_api.rs
crates/koldstore-migrate/: Cargo.toml
crates/koldstore-migrate/src/: lib.rs
crates/koldstore-migrate/tests/: change_log_mirror_dml.rs  change_log_mirror_shape.rs  clean_schema_enable.rs  clean_schema_helpers.rs  demigrate_disable.rs  drop_table_policy.rs  greenfield_shared.rs  manage_table_validation.rs  migrate_backfill_jobs.rs  migrate_constraint_policy.rs  migrate_entrypoint.rs  migrate_existing.rs  migrate_existing_clean_schema.rs  migrate_existing_workflow.rs  migrate_operation_lock.rs  migrate_type_matrix.rs  schema_registry.rs  scope_policy.rs
crates/koldstore-parquet/: Cargo.toml
crates/koldstore-parquet/src/: batch_builder.rs  footer.rs  footer_cache.rs  footer_stats.rs  lib.rs  object_reader.rs  pg_type_codec.rs  prune.rs  reader.rs  schema.rs  writer.rs
crates/koldstore-parquet/tests/: footer_stats.rs  reader_pruning.rs  schema.rs  writer_durability.rs  writer_roundtrip.rs
crates/koldstore-schema/: Cargo.toml
crates/koldstore-schema/src/: evolution.rs  lib.rs  pg_type.rs  schema_registry.rs  state.rs  type_matrix.rs
crates/koldstore-schema/tests/: schema_models.rs
crates/koldstore-storage/: Cargo.toml
crates/koldstore-storage/src/: backend.rs  client.rs  lib.rs  object.rs  path_template.rs  publish.rs  registration.rs
crates/koldstore-storage/tests/: storage_minio.rs  storage_publish.rs  storage_registration.rs
crates/pg_koldstore/: Cargo.toml  build.rs  koldstore.control
crates/pg_koldstore-shell-tests/: Cargo.toml
crates/pg_koldstore-shell-tests/src/: lib.rs
crates/pg_koldstore-shell-tests/tests/: async_pgoutput.rs  cold_only_delete_sql.rs  hot_delete_tombstone.rs  hot_dml_concurrency.rs  hot_dml_invariants.rs  hot_dml_no_cold_reads.rs  hot_update_stamp.rs  lifecycle.rs  merge_scan_explain.rs  merge_scan_reader_pool.rs  snowflake_defaults.rs  system_column_guards.rs  user_scope_dml.rs  user_scope_fail_closed.rs
crates/pg_koldstore/native/: custom_scan.c  custom_scan.h
crates/pg_koldstore/sql/: koldstore--0.1.0--0.1.4-beta.0.sql  koldstore--0.1.0--0.1.4-beta.1.sql  koldstore--0.1.0--0.1.5-beta.0.sql  koldstore--0.1.0--0.1.5-beta.1.sql  (+2 more)
tests/compat/: Cargo.toml  kalamdb_manifest_parquet.rs
tests/e2e/: Cargo.toml  all.rs  change_feed.rs  cold_dml_matrix.rs  column_id_stability.rs  demigrate_cold_artifacts.rs  demigrate_matrix.rs  endurance.rs  export_compatibility.rs  failure_injection.rs  flush_manifest_storage.sh  flush_matrix.rs  flush_object_outage.rs  flush_recovery.rs  flush_to_cold.rs  full_lifecycle.rs  greenfield_matrix.rs  harness_mode.rs  jobs_and_recovery.rs  merge_scan_matrix.rs  merge_scan_outage.rs  merge_scan_results.rs  migrate_existing_matrix.rs  quickstart_matrix.rs  run_pg_matrix.sh  schema_evolution.rs  segment_lifecycle.rs  snowflake_concurrency.rs  storage_rotation.rs  user_scope_cold_pruning.rs  user_scope_matrix.rs
tests/examples/: Cargo.toml  README.md  ai_memory.rs  audit_events.rs  chat_history.rs  game_events.rs  iot_telemetry.rs
tests/memory/: Cargo.toml  allocation_growth.rs  heap_profile.md  memory_probe.rs  merge_scan_leak.rs  run_memory_checks.sh  valgrind.supp
tests/storage/: Cargo.toml  README.md  pg_vs_koldstore.rs  schema.sql
tests/stress/: Cargo.toml  README.md
(+593 files in other folders)
