[workspace]
members = [
    "crates/koldstore-common",
    "crates/koldstore-catalog",
    "crates/koldstore-schema",
    "crates/koldstore-setup",
    "crates/koldstore-manifest",
    "crates/koldstore-storage",
    "crates/koldstore-parquet",
    "crates/koldstore-merge",
    "crates/koldstore-mirror",
    "crates/koldstore-jobs",
    "crates/koldstore-flush",
    "crates/koldstore-migrate",
    "crates/pg_koldstore",
    "crates/pg_koldstore-shell-tests",
    "benchmarks",
    "tests/e2e",
    "tests/examples",
    "tests/memory",
    "tests/storage",
]
default-members = [
    "crates/koldstore-common",
    "crates/koldstore-catalog",
    "crates/koldstore-schema",
    "crates/koldstore-setup",
    "crates/koldstore-manifest",
    "crates/koldstore-storage",
    "crates/koldstore-parquet",
    "crates/koldstore-merge",
    "crates/koldstore-mirror",
    "crates/koldstore-jobs",
    "crates/koldstore-flush",
    "crates/koldstore-migrate",
    "crates/pg_koldstore",
    "crates/pg_koldstore-shell-tests",
    "benchmarks",
    "tests/memory",
]
resolver = "2"

[workspace.package]
version = "0.1.4-beta.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kalamdb/koldstore"
rust-version = "1.96"

[workspace.dependencies]
koldstore-common = { path = "crates/koldstore-common" }
koldstore-catalog = { path = "crates/koldstore-catalog" }
koldstore-schema = { path = "crates/koldstore-schema" }
koldstore-setup = { path = "crates/koldstore-setup" }
koldstore-manifest = { path = "crates/koldstore-manifest" }
koldstore-storage = { path = "crates/koldstore-storage" }
koldstore-parquet = { path = "crates/koldstore-parquet" }
koldstore-merge = { path = "crates/koldstore-merge" }
koldstore-mirror = { path = "crates/koldstore-mirror" }
koldstore-jobs = { path = "crates/koldstore-jobs" }
koldstore-flush = { path = "crates/koldstore-flush" }
koldstore-migrate = { path = "crates/koldstore-migrate" }

anyhow = "1"
arrow-array = { version = "59.1.0", default-features = false }
arrow-schema = { version = "59.1.0", default-features = false }
base64 = "0.22"
bytes = "1.12.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3"
hex = "0.4"
object_store = { version = "0.14.1", default-features = false, features = ["fs", "aws"] }
pgrx = { version = "0.19.1", default-features = false }
pgrx-tests = { version = "0.19.1", default-features = false }
parquet = { version = "59.1.0", default-features = false, features = ["arrow", "async", "zstd", "snap"] }
postgres-types = "0.2"
rand = "0.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11.0"
tempfile = "3"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "fs"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.5", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
correctness = "deny"
suspicious = "warn"
complexity = "warn"
perf = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Distribution profile: smallest binaries with full LTO dead-code elimination.
# Use with: cargo build --profile release-dist
[profile.release-dist]
inherits = "release"
opt-level = "z"
lto = true

# PostgreSQL extension profile: optimized like release, but panic must unwind
# for pgrx/PostgreSQL longjmp (ereport) compatibility. Plain `cargo build
# --release` / `cargo pgrx install --release` use panic=abort and will abort the
# backend on extension ERROR paths.
# Use with: cargo pgrx install --profile release-pg
#           cargo pgrx package --profile release-pg-dist
[profile.release-pg]
inherits = "release"
panic = "unwind"
strip = true

# Smallest packaged binaries (inherits release-pg unwind + size opts).
[profile.release-pg-dist]
inherits = "release-pg"
opt-level = "z"
lto = true

[profile.bench]
inherits = "release"
debug = true
strip = false
