[workspace]
members = [
    "crates/koldstore-common",
    "crates/koldstore-catalog",
    "crates/koldstore-schema",
    "crates/koldstore-setup",
    "crates/koldstore-manifest",
    "crates/koldstore-storage",
    "crates/koldstore-parquet",
    "crates/koldstore-merge",
    "crates/koldstore-mirror",
    "crates/koldstore-worker",
    "crates/koldstore-flush",
    "crates/koldstore-migrate",
    "crates/pg_koldstore",
    "crates/pg_koldstore-shell-tests",
    "benchmarks",
    "tests/e2e",
    "tests/examples",
    "tests/memory",
    "tests/storage",
    "tests/stress",
]
default-members = [
    "crates/koldstore-common",
    "crates/koldstore-catalog",
    "crates/koldstore-schema",
    "crates/koldstore-setup",
    "crates/koldstore-manifest",
    "crates/koldstore-storage",
    "crates/koldstore-parquet",
    "crates/koldstore-merge",
    "crates/koldstore-mirror",
    "crates/koldstore-worker",
    "crates/koldstore-flush",
    "crates/koldstore-migrate",
    "crates/pg_koldstore",
    "crates/pg_koldstore-shell-tests",
    "benchmarks",
    "tests/memory",
]
resolver = "2"

[workspace.package]
version = "0.1.6-beta.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kalamdb/koldstore"
rust-version = "1.96"

[workspace.dependencies]
koldstore-common = { path = "crates/koldstore-common" }
koldstore-catalog = { path = "crates/koldstore-catalog" }
koldstore-schema = { path = "crates/koldstore-schema" }
koldstore-setup = { path = "crates/koldstore-setup" }
koldstore-manifest = { path = "crates/koldstore-manifest" }
# default-features = false so dependents opt into `s3` (aws-lc / rustls) explicitly.
koldstore-storage = { path = "crates/koldstore-storage", default-features = false }
koldstore-parquet = { path = "crates/koldstore-parquet" }
koldstore-merge = { path = "crates/koldstore-merge" }
koldstore-mirror = { path = "crates/koldstore-mirror" }
koldstore-worker = { path = "crates/koldstore-worker" }
koldstore-flush = { path = "crates/koldstore-flush" }
koldstore-migrate = { path = "crates/koldstore-migrate" }

anyhow = "1.0.104"
arrow-array = { version = "59.1.0", default-features = false }
arrow-schema = { version = "59.1.0", default-features = false }
bytes = "1.12.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3.33"
hex = "0.4.3"
# Backend features (`fs`, and optionally S3 via `koldstore-storage`'s `s3`
# feature: aws-base + rustls-no-provider/ring) stay out of crates that only
# need the `ObjectStore` trait.
object_store = { version = "0.14.1", default-features = false }
pgrx = { version = "0.19.1", default-features = false }
pgrx-bench = { version = "0.19.1", default-features = false }
pgrx-tests = { version = "0.19.1", default-features = false }
parquet = { version = "59.1.0", default-features = false, features = ["arrow", "async", "zstd", "snap"] }
# Shared with object_store's HTTP transport. `rustls-no-provider` + ring keeps
# aws-lc and OpenSSL out of the extension (OpenSSL conflicts with PostgreSQL).
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider", "stream"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.19"
# Shared runtime features for library crates. Test binaries add `macros`;
# benchmarks add `process` where `tokio::process` is used.
tokio = { version = "1.53.1", features = ["rt-multi-thread", "time"] }
tokio-postgres = "0.7.18"
tracing = "0.1.44"
uuid = { version = "1.24.0", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
correctness = "deny"
suspicious = "warn"
complexity = "warn"
perf = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Distribution profile: smallest binaries with full LTO dead-code elimination.
# Use with: cargo build --profile release-dist
[profile.release-dist]
inherits = "release"
opt-level = "z"
lto = true

# PostgreSQL extension profile: optimized like release, but panic must unwind
# for pgrx/PostgreSQL longjmp (ereport) compatibility. Plain `cargo build
# --release` / `cargo pgrx install --release` use panic=abort and will abort the
# backend on extension ERROR paths.
# Use with: cargo pgrx install --profile release-pg
#           cargo pgrx package --profile release-pg-dist
[profile.release-pg]
inherits = "release"
panic = "unwind"
strip = true

# Smallest packaged binaries (inherits release-pg unwind + size opts).
[profile.release-pg-dist]
inherits = "release-pg"
opt-level = "z"
lto = true

[profile.bench]
inherits = "release"
debug = true
strip = false
