[package]
name = "pg-koldstore-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
criterion.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true

[lints]
workspace = true

