[package]
name = "pg-koldstore-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "process"] }
tokio-postgres.workspace = true

[dev-dependencies]
criterion = "0.7"
koldstore-catalog.workspace = true
koldstore-common.workspace = true
koldstore-manifest.workspace = true
koldstore-flush.workspace = true
koldstore-migrate.workspace = true
koldstore-merge.workspace = true
koldstore-mirror.workspace = true
koldstore-parquet.workspace = true
koldstore-schema.workspace = true
koldstore-storage.workspace = true
koldstore = { path = "../crates/pg_koldstore", package = "pg_koldstore", default-features = false }

[[bench]]
name = "extension_manifest"
path = "benches/extension_manifest.rs"
harness = false

[[bench]]
name = "extension_flush"
path = "benches/extension_flush.rs"
harness = false

[[bench]]
name = "extension_cold_pruning"
path = "benches/extension_cold_pruning.rs"
harness = false

[[bench]]
name = "extension_serialization"
path = "benches/extension_serialization.rs"
harness = false

[lints]
workspace = true

