[package]
name = "koldstore-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
koldstore-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]

[lints]
workspace = true

