[package]
name = "koldstore-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
koldstore-common.workspace = true
koldstore-schema.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
