[package]
name = "koldstore-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
koldstore-catalog.workspace = true
koldstore-common.workspace = true
koldstore-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
