[package]
name = "koldstore-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Table migration and demigration planning for pg-koldstore"

[dependencies]
koldstore-common.workspace = true
koldstore-jobs.workspace = true
koldstore-mirror.workspace = true
koldstore-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
