[package]
name = "koldstore-parquet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
futures-util.workspace = true
koldstore-core.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
