[package]
name = "koldstore-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Migrated-table schema registry models for pg-koldstore"

[dependencies]
koldstore-common.workspace = true
serde.workspace = true
uuid.workspace = true

[lints]
workspace = true
