[package]
name = "koldstore-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["s3"]
# S3/MinIO via object_store aws-base + platform native TLS + ring SigV4.
# Avoids the default `object_store/aws` stack (reqwest/rustls + aws-lc).
s3 = [
    "object_store/aws-base",
    "object_store/reqwest",
    "object_store/ring",
    "dep:reqwest",
]

[dependencies]
bytes.workspace = true
futures-util.workspace = true
koldstore-common.workspace = true
# `aws-base` / HTTP / signing are opt-in via the `s3` feature.
object_store = { workspace = true, features = ["fs"] }
# Feature-unified with object_store's reqwest; enables native TLS (no aws-lc).
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
koldstore-common.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
