[package]
name = "koldstore-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
# Feature-unifies rustls with object_store's HTTP stack; not imported directly.
ignored = ["reqwest"]

[features]
default = ["s3"]
# S3/MinIO via object_store aws-base + rustls (ring provider) + ring SigV4.
# Avoids `object_store/aws` (aws-lc) and native-tls (OpenSSL), both of which
# bloat or conflict inside the PostgreSQL backend process.
s3 = [
    "object_store/aws-base",
    "object_store/reqwest",
    "object_store/ring",
    "dep:reqwest",
    "dep:rustls",
]

[dependencies]
bytes.workspace = true
futures-util.workspace = true
koldstore-common.workspace = true
# `aws-base` / HTTP / signing are opt-in via the `s3` feature.
object_store = { workspace = true, features = ["fs"] }
# Feature-unified with object_store's reqwest; rustls without bundled aws-lc.
reqwest = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
koldstore-common.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
