[package]
name = "pg_koldstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["cc"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
pg = ["dep:pgrx"]
pg15 = ["pg", "pgrx/pg15"]
pg16 = ["pg", "pgrx/pg16"]
pg17 = ["pg", "pgrx/pg17"]
pg18 = ["pg", "pgrx/pg18"]
cshim = ["dep:pgrx", "pgrx/cshim"]
pg_test = []

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
koldstore-catalog.workspace = true
koldstore-common.workspace = true
koldstore-flush.workspace = true
koldstore-manifest.workspace = true
koldstore-merge.workspace = true
koldstore-mirror.workspace = true
koldstore-parquet.workspace = true
koldstore-migrate.workspace = true
koldstore-schema.workspace = true
koldstore-storage.workspace = true
pgrx = { workspace = true, optional = true }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
koldstore-common.workspace = true
koldstore-flush.workspace = true
koldstore-merge.workspace = true
koldstore-migrate.workspace = true
koldstore-schema.workspace = true
koldstore-setup.workspace = true
koldstore-storage.workspace = true

[build-dependencies]
cc = "1"

[lints]
workspace = true
