[package]
name = "pg-koldstore-compat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[test]]
name = "kalamdb_manifest_parquet"
path = "kalamdb_manifest_parquet.rs"

[dev-dependencies]
koldstore-manifest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
