[package]
name = "e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[test]]
name = "greenfield_matrix"
path = "migrate/greenfield_matrix.rs"

[[test]]
name = "migrate_existing_matrix"
path = "migrate/migrate_existing_matrix.rs"

[[test]]
name = "flush_to_cold"
path = "flush/flush_to_cold.rs"

[[test]]
name = "flush_recovery"
path = "flush/flush_recovery.rs"

[[test]]
name = "flush_object_outage"
path = "flush/flush_object_outage.rs"

[[test]]
name = "flush_matrix"
path = "flush/flush_matrix.rs"

[[test]]
name = "merge_scan_results"
path = "merge/merge_scan_results.rs"

[[test]]
name = "merge_scan_outage"
path = "merge/merge_scan_outage.rs"

[[test]]
name = "merge_scan_matrix"
path = "merge/merge_scan_matrix.rs"

[[test]]
name = "cold_dml_matrix"
path = "dml/cold_dml_matrix.rs"

[[test]]
name = "user_scope_cold_pruning"
path = "merge/user_scope_cold_pruning.rs"

[[test]]
name = "user_scope_matrix"
path = "scope/user_scope_matrix.rs"

[[test]]
name = "change_feed"
path = "dml/change_feed.rs"

[[test]]
name = "demigrate_cold_artifacts"
path = "migrate/demigrate_cold_artifacts.rs"

[[test]]
name = "demigrate_matrix"
path = "migrate/demigrate_matrix.rs"

[[test]]
name = "jobs_and_recovery"
path = "jobs_and_recovery.rs"

[[test]]
name = "storage_rotation"
path = "storage/storage_rotation.rs"

[[test]]
name = "export_compatibility"
path = "storage/export_compatibility.rs"

[[test]]
name = "quickstart_matrix"
path = "quickstart_matrix.rs"

[[test]]
name = "endurance"
path = "endurance.rs"

[[test]]
name = "failure_injection"
path = "failure_injection.rs"

[[test]]
name = "snowflake_concurrency"
path = "snowflake_concurrency.rs"

[[test]]
name = "full_lifecycle"
path = "full_lifecycle.rs"

[dev-dependencies]
anyhow.workspace = true
koldstore-core.workspace = true
koldstore-manifest.workspace = true
koldstore-parquet.workspace = true
koldstore-storage.workspace = true
parquet.workspace = true
pg_koldstore = { path = "../../crates/pg_koldstore", default-features = false }
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true

[lints]
workspace = true
