[package]
name = "e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# One integration-test binary so nextest lists and runs the full suite together.
# Category modules remain filterable via nextest expressions, e.g.
#   cargo nextest run -p e2e -E 'test(crash::)' --test-threads 1

[[test]]
name = "e2e"
path = "all.rs"

[dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
koldstore-catalog.workspace = true
koldstore-common.workspace = true
koldstore-flush.workspace = true
koldstore-merge.workspace = true
koldstore-migrate.workspace = true
koldstore-manifest.workspace = true
koldstore-parquet.workspace = true
koldstore-storage = { workspace = true, features = ["s3"] }
koldstore-memory-tests = { path = "../memory" }
parquet.workspace = true
koldstore = { path = "../../crates/pg_koldstore", package = "pg_koldstore", default-features = false }
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros"] }
tokio-postgres.workspace = true

[lints]
workspace = true
