[package]
name = "storage-comparison"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[test]]
name = "pg_vs_koldstore"
path = "pg_vs_koldstore.rs"

[dev-dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true

[lints]
workspace = true
